Additional styles and page layout bug fixes

--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@ Also includes custom CSS for theme
 	font-size: 45px;
 	margin-bottom: 25px;
 	font-family: RosesRustic;
-	color: #CCAD52;
+	color: #fcaf17;
 }
 
-.roses-header {
-	background-color: #201D16 !important;
-	border-bottom: #CCAD52 solid;
+#header{
+	background: linear-gradient(rgba(32, 29, 22, 0.95), rgba(32, 29, 22, 0.95)) !important;
+	border-bottom: 3px solid #fcaf17;
 }
 
 header nav a {
@@ -46,27 +46,6 @@ header nav a {
 header nav .is-brand {
 	font-family: RosesRustic;
 	font-size: 2rem;
-}
-
-/* Sections */
-.even-section {
-	background: -webkit-linear-gradient(top, #201d16 1%,#2b261d 55%,#494332 100%);
-	padding: 35px 0;
-}
-
-.odd-section {
-	background: linear-gradient(rgba(32, 29, 22, 0.95), rgba(32, 29, 22, 0.95));
-	padding: 35px 0;
-}
-
-/* Components */
-.album-cover-image {
-	height: 350px;
-	width: 350px;
-}
-
-.streaming-icon {
-	padding: 20px 15px;
 }
 
 /* Colors */
@@ -84,21 +63,81 @@ header nav .is-brand {
 }
 
 /* Helper CSS */
-.text-center {
-    text-align: center;
+
+
+/* Sections */
+.even-section {
+	background: -webkit-linear-gradient(top, #201d16 1%,#2b261d 55%,#494332 100%);
+	padding: 35px 0;
 }
 
-/* Media Queries */
-@media (min-width: 998px) {
-	.album-promo {
-		transform: translateY(8%);
-	}
+.odd-section {
+	background: linear-gradient(rgba(32, 29, 22, 0.95), rgba(32, 29, 22, 0.95));
+	padding: 35px 0;
 }
 
-/* Footer CSS */
-footer a {
-	padding: 0 3% 0 3%;
-	color: #fcaf17;
+.bio-section {
+	height: 250px;
+}
+
+.bio-section .container {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+/* Components */
+.album-cover-image {
+	height: 350px;
+	width: 350px;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.album-cover-image:hover {
+	-moz-transform: scale(1.05);
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
+}
+
+.streaming-icon i {
+	padding: 15px;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.streaming-icon:hover i {
+	-moz-transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+.gigs-table tbody tr {
+	background-color: #201D16;
+	color: black;
+}
+
+.card {
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.card:hover {
+	-moz-transform: scale(1.02);
+	-webkit-transform: scale(1.02);
+	transform: scale(1.02);
+}
+
+.card-content {
+	box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+}
+
+/* Removal of Slider Bar */
+.ms-sbar.ms-dir-h {
+	display: none;
 }
 
 /* News Posts */
@@ -116,4 +155,40 @@ footer a {
 
 .card .title a, .card h2 {
 	font-family: RosesRustic;
+}
+
+.top-margin {
+	margin-top: 10px
+}
+
+/* Footer CSS */
+footer {
+	background: linear-gradient(rgba(32, 29, 22, 0.95), rgba(32, 29, 22, 0.95));
+	border-top: 3px solid #fcaf17;
+}
+
+footer a {
+	padding: 0 15px;
+	color: #fcaf17;
+}
+
+#footerBody {
+	padding: 25px 20px;
+}
+
+/* Media Queries */
+@media (min-width: 998px) {
+	.album-promo {
+		transform: translateY(8%);
+	}
+}
+
+@media (max-width: 768px) {
+	.streaming-icon i {
+		padding-bottom: 10px;
+	}
+
+	#music {
+		padding-bottom: 0;
+	}
 }
